crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__attention_ladder.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
5b 01 00 00 0b 01 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 30 11 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 74 17 05 dc 0b 01 10 00 00 00
00 00 00 00 00 00 00 00 00 00 00 30 11 10 00 00
00 00 00 00 00 00 00 00 00 00 00 00 5e 55 05 01
02 03 04 05 06 01 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 30 11 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 74 17 dc 0b 01 10 00 00 00 00
00 00 00 00 00 00 00 00 00 00 30 11 05 01 02 03
04 05 06 01 10 00 00 00 00 00 00 00 00 00 00 00
00 00 00 30 11 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 74 17 dc 0b 02 06 73 6c 6f 70 74 79
00 00 00 00 00 00 00 00 00 00 06 73 6c 6f 70 74
79 01 02 05 01 02 03 04 05 06 01 10 00 00 00 00
00 00 00 00 00 00 00 00 00 00 30 11 10 00 00 00
00 00 00 00 00 00 00 00 00 00 00 74 17 dc 0b 01
06 73 6c 6f 70 74 79 05 01 02 03 04 05 06 01 10
00 00 00 00 00 00 00 00 00 00 00 00 00 00 30 11
10 00 00 00 00 00 00 00 00 00 00 00 00 00 00 74
17 dc 0b 05 01 02 03 04 05 06 01 10 00 00 00 00
00 00 00 00 00 00 00 00 00 00 30 11 10 00 00 00
00 00 00 00 00 00 00 00 00 00 00 74 17 dc 0b
