crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__attention_notice_finished.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
74 00 00 00 0c 02 00 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 30 11 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 74 17 01 10 00 00 00 00 00
00 00 00 00 00 00 00 00 00 30 11 10 00 00 00 00
00 00 00 00 00 00 00 00 00 00 5e 55 0e 46 69 78
20 74 68 65 20 6c 61 64 64 65 72 17 57 61 6e 74
73 20 74 6f 20 72 75 6e 20 63 61 72 67 6f 20 74
65 73 74 01 c8 d6 05 00
