crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__attention_notice_project.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
70 00 00 00 0d 03 01 06 73 6c 6f 70 74 79 29 01
10 00 00 00 00 00 00 00 00 00 00 00 00 00 00 30
11 10 00 00 00 00 00 00 00 00 00 00 00 00 00 00
5e 55 06 73 6c 6f 70 74 79 38 23 32 20 46 69 78
20 74 68 65 20 6c 61 64 64 65 72 3a 20 69 74 73
20 70 75 6c 6c 20 72 65 71 75 65 73 74 27 73 20
63 68 65 63 6b 73 20 66 61 69 6c 20 28 74 65 73
74 29 00 00
