crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__attention_presence.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
52 00 00 00 0b 00 01 01 06 73 6c 6f 70 74 79 01
10 00 00 00 00 00 00 00 00 00 00 00 00 00 00 30
11 10 00 00 00 00 00 00 00 00 00 00 00 00 00 00
5e 55 01 10 00 00 00 00 00 00 00 00 00 00 00 00
00 00 30 11 10 00 00 00 00 00 00 00 00 00 00 00
00 00 00 5e 55 01
