crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__attention_present.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
a8 00 00 00 0b 02 01 0a 6d 61 63 2d 73 74 75 64
69 6f 00 01 01 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 30 11 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 5e 55 01 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 30 11 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 5e 55 01 02 06 69 50 68
6f 6e 65 01 00 01 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 30 11 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 5e 55 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 30 11 10 00 00 00 00 00
00 00 00 00 00 00 00 00 00 5e 55 00
