crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__attention_threads.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
63 01 00 00 0b 00 01 03 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 74 17 0b 63 6c 61 75 64
65 2d 63 6f 64 65 0d 46 69 78 20 74 68 65 20 62
75 69 6c 64 03 01 0a 70 65 72 6d 69 73 73 69 6f
6e 17 57 61 6e 74 73 20 74 6f 20 72 75 6e 20 63
61 72 67 6f 20 74 65 73 74 00 d0 0f 01 05 61 73
6b 2d 31 01 07 74 6f 6f 6c 75 5f 32 08 61 70 70
72 6f 76 61 6c 0f 52 75 6e 20 63 61 72 67 6f 20
74 65 73 74 3f 03 05 61 6c 6c 6f 77 05 41 6c 6c
6f 77 00 00 00 06 61 6c 77 61 79 73 0c 41 6c 77
61 79 73 20 61 6c 6c 6f 77 00 01 12 42 61 73 68
28 63 61 72 67 6f 20 74 65 73 74 3a 2a 29 00 04
64 65 6e 79 02 4e 6f 01 00 01 a4 0d 01 06 4f 6e
20 69 74 2e 03 01 01 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 5e 55 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 9a 07 74 6f 6f 6c 75
5f 31 08 6f 62 73 65 72 76 65 64 02 05 71 75 65
75 65 05 73 74 65 65 72 01 06 62 72 61 6e 63 68
04 6d 61 69 6e 01 01 08 4f 70 75 73 20 35 2e 35
01 0f 63 6c 61 75 64 65 2d 6f 70 75 73 2d 35 2d
35 01 07 64 65 66 61 75 6c 74 01 90 c8 02 01 c0
9a 0c 01 90 a1 0f 01 09 66 69 76 65 2d 68 6f 75
72 e2 09 01 63 c4 13
