crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__attention_welcome.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
09 00 00 00 00 06 73 74 75 64 69 6f 07
