crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__client_approvals.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
02 00 00 00 07 01
