crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__client_expand.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
17 00 00 00 04 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 74 17 04 72 31 23 32
