crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__client_follow.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
17 00 00 00 01 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 74 17 01 01 07 14 10
